@@ -232,7 +232,7 @@ int MPI_Waitany(int count,
   SCOREP_IN_MEASUREMENT_INCREMENT();
   const int           event_gen_active           = SCOREP_MPI_IS_EVENT_GEN_ON;
   const int           event_gen_active_for_group = SCOREP_MPI_IS_EVENT_GEN_ON_FOR(SCOREP_MPI_ENABLED_REQUEST);
-  const int           xnb_active                 = (scorep_mpi_enabled & SCOREP_MPI_ENABLED_XNONBLOCK);
+  const int           xtest_active               = SCOREP_MPI_IS_EVENT_GEN_ON_FOR(SCOREP_MPI_ENABLED_XREQTEST);
   int                 return_val;
   uint64_t            start_time_stamp;
 
@@ -261,7 +261,7 @@ int MPI_Waitany(int count,
   return_val = PMPI_Waitany(count, requests, index, status);
   SCOREP_EXIT_WRAPPED_REGION();
 
-  if (event_gen_active_for_group && xnb_active)
+  if (event_gen_active_for_group && xtest_active)
     {
       int i;
 
@@ -326,7 +326,7 @@ int MPI_Waitsome(int incount,
   SCOREP_IN_MEASUREMENT_INCREMENT();
   const int           event_gen_active           = SCOREP_MPI_IS_EVENT_GEN_ON;
   const int           event_gen_active_for_group = SCOREP_MPI_IS_EVENT_GEN_ON_FOR(SCOREP_MPI_ENABLED_REQUEST);
-  const int           xnb_active                 = (scorep_mpi_enabled & SCOREP_MPI_ENABLED_XNONBLOCK);
+  const int           xtest_active               = SCOREP_MPI_IS_EVENT_GEN_ON_FOR(SCOREP_MPI_ENABLED_XREQTEST);
   int                 return_val;
   int                 i;
   uint64_t            start_time_stamp;
@@ -358,7 +358,7 @@ int MPI_Waitsome(int incount,
                          array_of_indices, array_of_statuses );
   SCOREP_EXIT_WRAPPED_REGION();
 
-  if (event_gen_active_for_group && xnb_active)
+  if (event_gen_active_for_group && xtest_active)
     {
       int j, tmp, cur;
       MPI_Status tmpstat;
@@ -448,7 +448,7 @@ int MPI_Test(MPI_Request* request,
   SCOREP_IN_MEASUREMENT_INCREMENT();
   const int           event_gen_active           = SCOREP_MPI_IS_EVENT_GEN_ON;
   const int           event_gen_active_for_group = SCOREP_MPI_IS_EVENT_GEN_ON_FOR(SCOREP_MPI_ENABLED_REQUEST);
-  const int           xtest_active               = (scorep_mpi_enabled & SCOREP_MPI_ENABLED_XREQTEST);
+  const int           xtest_active               = SCOREP_MPI_IS_EVENT_GEN_ON_FOR(SCOREP_MPI_ENABLED_XREQTEST);
   int                 return_val;
   uint64_t            start_time_stamp;
 
@@ -526,7 +526,7 @@ int MPI_Testany(int count,
   SCOREP_IN_MEASUREMENT_INCREMENT();
   const int           event_gen_active           = SCOREP_MPI_IS_EVENT_GEN_ON;
   const int           event_gen_active_for_group = SCOREP_MPI_IS_EVENT_GEN_ON_FOR(SCOREP_MPI_ENABLED_REQUEST);
-  const int           xtest_active               = (scorep_mpi_enabled & SCOREP_MPI_ENABLED_XREQTEST);
+  const int           xtest_active               = SCOREP_MPI_IS_EVENT_GEN_ON_FOR(SCOREP_MPI_ENABLED_XREQTEST);
   int                 return_val;
   uint64_t            start_time_stamp;
 
@@ -616,7 +616,7 @@ int MPI_Testall(int count,
   SCOREP_IN_MEASUREMENT_INCREMENT();
   const int           event_gen_active           = SCOREP_MPI_IS_EVENT_GEN_ON;
   const int           event_gen_active_for_group = SCOREP_MPI_IS_EVENT_GEN_ON_FOR(SCOREP_MPI_ENABLED_REQUEST);
-  const int           xtest_active               = (scorep_mpi_enabled & SCOREP_MPI_ENABLED_XREQTEST);
+  const int           xtest_active               = SCOREP_MPI_IS_EVENT_GEN_ON_FOR(SCOREP_MPI_ENABLED_XREQTEST);
   int                 return_val;
   int                 i;
   uint64_t            start_time_stamp;
@@ -706,7 +706,7 @@ int MPI_Testsome(int incount,
   SCOREP_IN_MEASUREMENT_INCREMENT();
   const int           event_gen_active           = SCOREP_MPI_IS_EVENT_GEN_ON;
   const int           event_gen_active_for_group = SCOREP_MPI_IS_EVENT_GEN_ON_FOR(SCOREP_MPI_ENABLED_REQUEST);
-  const int           xtest_active               = (scorep_mpi_enabled & SCOREP_MPI_ENABLED_XREQTEST);
+  const int           xtest_active               = SCOREP_MPI_IS_EVENT_GEN_ON_FOR(SCOREP_MPI_ENABLED_XREQTEST);
   int                 return_val;
   int                 i;
   uint64_t            start_time_stamp;
@@ -826,7 +826,7 @@ int MPI_Start(MPI_Request* request)
   SCOREP_IN_MEASUREMENT_INCREMENT();
   const int event_gen_active           = SCOREP_MPI_IS_EVENT_GEN_ON;
   const int event_gen_active_for_group = SCOREP_MPI_IS_EVENT_GEN_ON_FOR(SCOREP_MPI_ENABLED_REQUEST);
-  const int xnb_active                 = (scorep_mpi_enabled & SCOREP_MPI_ENABLED_XNONBLOCK);
+  const int xnb_active                 = SCOREP_MPI_IS_EVENT_GEN_ON_FOR(SCOREP_MPI_ENABLED_XNONBLOCK);
   int       return_val;
   uint64_t  start_time_stamp;
 
@@ -906,7 +906,7 @@ int MPI_Startall(int count,
   SCOREP_IN_MEASUREMENT_INCREMENT();
   const int event_gen_active           = SCOREP_MPI_IS_EVENT_GEN_ON;
   const int event_gen_active_for_group = SCOREP_MPI_IS_EVENT_GEN_ON_FOR(SCOREP_MPI_ENABLED_REQUEST);
-  const int xnb_active                 = (scorep_mpi_enabled & SCOREP_MPI_ENABLED_XNONBLOCK);
+  const int xnb_active                 = SCOREP_MPI_IS_EVENT_GEN_ON_FOR(SCOREP_MPI_ENABLED_XNONBLOCK);
   int       return_val;
   int       i;
   uint64_t  start_time_stamp;
@@ -991,7 +991,7 @@ int MPI_Request_free( MPI_Request* request )
   SCOREP_IN_MEASUREMENT_INCREMENT();
   const int           event_gen_active           = SCOREP_MPI_IS_EVENT_GEN_ON;
   const int           event_gen_active_for_group = SCOREP_MPI_IS_EVENT_GEN_ON_FOR(SCOREP_MPI_ENABLED_REQUEST);
-  const int           xnb_active                 = (scorep_mpi_enabled & SCOREP_MPI_ENABLED_XNONBLOCK);
+  const int           xnb_active                 = SCOREP_MPI_IS_EVENT_GEN_ON_FOR(SCOREP_MPI_ENABLED_XNONBLOCK);
   int                 orig_req_null              = (*request == MPI_REQUEST_NULL);
   int                 return_val;
 
@@ -1161,7 +1161,7 @@ int MPI_Request_get_status(MPI_Request request,
   SCOREP_IN_MEASUREMENT_INCREMENT();
   const int           event_gen_active           = SCOREP_MPI_IS_EVENT_GEN_ON;
   const int           event_gen_active_for_group = SCOREP_MPI_IS_EVENT_GEN_ON_FOR(SCOREP_MPI_ENABLED_REQUEST);
-  const int           xtest_active               = (scorep_mpi_enabled & SCOREP_MPI_ENABLED_XREQTEST);
+  const int           xtest_active               = SCOREP_MPI_IS_EVENT_GEN_ON_FOR(SCOREP_MPI_ENABLED_XREQTEST);
   int                 return_val;
   scorep_mpi_request* scorep_req;
   uint64_t            start_time_stamp;
