@@ -65,7 +65,8 @@ Bugfixes:
 - Non-blocking MPI I/O events now produce the correct `IoOperationTest`
   event instead of the erroneous `MpiRequestTested` event for an
   unsuccessful MPI_Test on the request.
-
+- Events for unsuccessful MPI_Test on a request are now consistently triggered
+  by the `xreqtest` group.
 
 ------------------- Released version 7.1 -----------------------------
 
